# ColourSensor-TCS3200

./: Links.md  README.md
Arduino/ColourSensorCalibration/: ColourSensorCalibration.ino
Arduino/ReadColours/: ReadColours.ino
ClassificationColour/: classifycolours.py  colours.csv
ClassificationColour/saved_model/colours_model/: saved_model.pb
ClassificationColour/saved_model/colours_model/variables/: variables.data-00000-of-00001  variables.index
ESP32/TCS3200-ReadRGB/: CMakeLists.txt  Makefile
ESP32/TCS3200-ReadRGB/main/: CMakeLists.txt  TCS320.h  main.c  utilities.c  utilities.h
FRDM-KL25Z/: Keil-ReadRGBColours.uvguix.alan  Keil-ReadRGBColours.uvoptx  Keil-ReadRGBColours.uvprojx  TCS320.h  accel.c  accel.h  common.h  delay.c  main.c  pulse_measure.c  pulse_measure.h  ring.c  ring.h  uart.c  uart.h
FRDM-KL25Z/Objects/: Keil-ReadRGBColours.axf  Keil-ReadRGBColours.build_log.htm  Keil-ReadRGBColours.htm  Keil-ReadRGBColours.lnp  Keil-ReadRGBColours_Target 1.dep
FRDM-KL25Z/RTE/_Target_1/: RTE_Components.h
LinuxKernelModule/ColourSensorReadRGB/: Makefile  coloursensor.c  install.sh  uninstall.sh
LinuxKernelModule/ColourSensorReadRGB/userspace/: Makefile
LinuxKernelModule/ColourSensorReadRGB/userspace/include/: utilities.h
LinuxKernelModule/ColourSensorReadRGB/userspace/src/: read_rgb.c  utilities.c
MSP432/TCS3200-ReadRGB/: CMakeLists.txt  README.md
MSP432/TCS3200-ReadRGB/include/: bsp.h  gpio.h  interrupts.h  led.h  spi.h  uart.h
MSP432/TCS3200-ReadRGB/src/: CMakeLists.txt  bsp.c  main.cpp  spi.c  startup_msp432p401r_gcc.c  tcs3200.cpp  uart.c
STM32F767ZI-Nucleo-144/: .cproject  .mxproject  .project  ReadRGBColours Debug.launch  ReadRGBColours.ioc
STM32F767ZI-Nucleo-144/Core/Inc/: main.h
STM32F767ZI-Nucleo-144/Core/Src/: main.c  stm32f7xx_hal_msp.c
STM32F767ZI-Nucleo-144/Debug/: ReadRGBColours.list  makefile
TivaC/TCS3200-ReadRGB/: Makefile  tiva.svd  tiva123.ld
TivaC/TCS3200-ReadRGB/TCS3200/: TCS3200.c  TCS3200.h
TivaC/TCS3200-ReadRGB/include/: TM4C123GH6PM.h  Utils.h  bsp.h  tiva_uart.h
TivaC/TCS3200-ReadRGB/src/: Utils.c  bsp.c  main.c  startup_gcc.c  tiva_uart.c
TivaC/TCS3200-ReadRGB/test/: test_bsp.c
img/: Thumbs.db
img/STM32F767ZI-Nucleo144/: Thumbs.db
